--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks,node
 
 .DS_Store
+.vscode/
 
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
