--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "black",
+  "editor.formatOnSaveMode": "modifications",
+  "editor.formatOnSave": true
 }
