--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+creds.py
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks,node
 
